--- a/ARIAR_PayrollSystem/Properties/Resources.resx
+++ b/ARIAR_PayrollSystem/Properties/Resources.resx
@@ -121,8 +121,14 @@
   <data name="person_logo_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\person_logo_dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user-3-line" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-3-line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="config_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\config_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="search-line (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search-line (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="config_logo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\config_logo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -130,14 +136,17 @@
   <data name="group_logo4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\group_logo4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="calculate_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\calculate_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="config_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\config_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="task_check_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\task_check_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="calculate_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\calculate_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="exit_logo_big" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exit_logo_big.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Untitled design (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Untitled design (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,11 +163,17 @@
   <data name="CLOSE_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CLOSE_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logout_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logout_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="exit_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exit_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CHECK_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CHECK_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user-3-fill (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-3-fill (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user-3-fill" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-3-fill.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="location_away_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\location_away_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -168,6 +183,9 @@
   </data>
   <data name="menu_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\menu_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user-line" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="database_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\database_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -184,8 +202,8 @@
   <data name="keyboard_arrow_right_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\keyboard_arrow_right_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="schedule_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\schedule_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="logout_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logout_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="description_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\description_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,10 +217,13 @@
   <data name="person_logo_large" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\person_logo_large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="schedule_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\schedule_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="group_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\group_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search-line (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\search-line (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lock-2-line" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lock-2-line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
