made the overlay for modal working properly

--- a/ARIAR_PayrollSystem/Forms/SystemMaintenance.resx
+++ b/ARIAR_PayrollSystem/Forms/SystemMaintenance.resx
@@ -452,4 +452,7 @@
         AAAAABO2227/B2NNb/FnCmAPAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="guna2MessageDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>323, 14</value>
+  </metadata>
 </root>
